Fix massive onboarding bug where new user was not able to register

--- a/Taylr/UserInterface/Me/Me.storyboard
+++ b/Taylr/UserInterface/Me/Me.storyboard
@@ -34,7 +34,7 @@
         <!--Auto Complete Data Source-->
         <scene sceneID="CCY-8A-vmM">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="mcp-Sh-vTg" customClass="EditHashtagsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditHashtags" automaticallyAdjustsScrollViewInsets="NO" id="mcp-Sh-vTg" customClass="EditHashtagsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="un5-vE-2AL"/>
                         <viewControllerLayoutGuide type="bottom" id="8u6-rk-AbR"/>
