--- a/Taylr/UserInterface/Me/Me.storyboard
+++ b/Taylr/UserInterface/Me/Me.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="91E-72-d0t">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Dnf-Dt-ncn">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -555,7 +555,7 @@
         <!--Me-->
         <scene sceneID="Q8l-pK-Aaz">
             <objects>
-                <tableViewController storyboardIdentifier="Me" title="Me" automaticallyAdjustsScrollViewInsets="NO" id="91E-72-d0t" customClass="MeViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="Me" title="Me" automaticallyAdjustsScrollViewInsets="NO" id="91E-72-d0t" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="static" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="60" sectionHeaderHeight="10" sectionFooterHeight="10" id="SqV-Qb-UAw" customClass="TPKeyboardAvoidingTableView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1056,6 +1056,24 @@
             </objects>
             <point key="canvasLocation" x="-273" y="2391"/>
         </scene>
+        <!--Hashtags View Controller-->
+        <scene sceneID="i1f-lq-H18">
+            <objects>
+                <viewController id="Dnf-Dt-ncn" customClass="HashtagsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WiF-f5-QV8"/>
+                        <viewControllerLayoutGuide type="bottom" id="LV3-VK-VfT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fYg-nR-JoF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SJI-3c-PTZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-243" y="2923"/>
+        </scene>
         <!--Integration Web View Controller-->
         <scene sceneID="fzy-6N-sue">
             <objects>
@@ -1121,6 +1139,6 @@
         <image name="sample-photo" width="1242" height="660"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bXG-qY-mxs"/>
+        <segue reference="hfn-jz-cIv"/>
     </inferredMetricsTieBreakers>
 </document>
